# LDRFilm1

./: .gitmodules  CMakeLists.txt  hdrexample.cpp  main.cpp
external_libraries/: CMakeLists.txt
hdrview/: .appveyor.yml
hdrview/resources/: icon.rc
include/: README.md
include/Gregar_v.01/: create.h  film.h  gui.h  hdrfilm.h  ldrfilm.h  numfilm.h
src/core/: CMakeLists.txt  create.cpp
src/film/: CMakeLists.txt  film.cpp  hdrfilm.cpp  ldrfilm.cpp  numfilm.cpp  unit_test_film.cpp
src/gui/: CMakeLists.txt  gui.cpp  unit_test_gui.cpp
